--- a/free_shark/free_shark.cfg
+++ b/free_shark/free_shark.cfg
@@ -1,2 +1,5 @@
 DEBUG=True
 SECRET_KEY='dev'
+SQLALCHEMY_DATABASE_URI = 'mysql+pymysql://root:root@localhost:3306/free_shark?charset=utf8'
+# 'mysql+pymysql://用户名称:密码@localhost:端口/数据库名称'
+SQLALCHEMY_TRACK_MODIFICATIONS = True
