--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ Bootstrap-Flask==1.1.0
 Click==7.0
 Flask==1.1.1
 Flask-Login==0.4.1
-
-
+Flask-Principal==0.4.0
+Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
