--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,23 @@
-Werkzeug==0.15.4
+blinker==1.4
+Bootstrap-Flask==1.1.0
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+docopt==0.6.2
 Flask==1.1.1
+Flask-Login==0.4.1
+Flask-Principal==0.4.0
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.2
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+pipreqs==0.4.10
+PyMySQL==0.9.3
+requests==2.22.0
+SQLAlchemy==1.3.11
+urllib3==1.25.7
+Werkzeug==0.16.0
+WTForms==2.2.1
+yarg==0.1.9
