--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+atomicwrites==1.3.0
+attrs==19.3.0
 blinker==1.4
 Bootstrap-Flask==1.1.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+colorama==0.4.1
 docopt==0.6.2
 Flask==1.1.1
 Flask-Login==0.4.1
@@ -10,14 +13,24 @@ Flask-Principal==0.4.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 idna==2.8
+importlib-metadata==1.0.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+more-itertools==8.0.0
+packaging==19.2
 pipreqs==0.4.10
+pluggy==0.13.1
+py==1.8.0
 PyMySQL==0.9.3
+pyparsing==2.4.5
+pytest==5.3.1
 requests==2.22.0
+six==1.13.0
 SQLAlchemy==1.3.11
 urllib3==1.25.7
+wcwidth==0.1.7
 Werkzeug==0.16.0
 WTForms==2.2.1
 yarg==0.1.9
+zipp==0.6.0
