完成了商品的CRUD

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ build/
 *.egg-info/
 .vscode/settings.json
 free_shark/db_config.cfg
+.cache/v/cache/lastfailed
+tests/.cache/v/cache/lastfailed
+tests/test_commoditymodel.py
