--- a/tests/db_config.cfg
+++ b/tests/db_config.cfg
@@ -3,5 +3,5 @@ DB_USER='root'
 DB_PASSWORD='root'
 DB_PORT=3306
 DB_CHARSET='utf8'
-DATABASE='free_shark_test'
+DATABASE='free_shark'
 DB_TABLES=['commodity','order','student','user']
