--- a/tests/db_config.cfg
+++ b/tests/db_config.cfg
@@ -4,4 +4,4 @@ DB_PASSWORD='root'
 DB_PORT=3306
 DB_CHARSET='utf8'
 DATABASE='free_shark_test'
-DB_TABLES=['commodity','order','student','user']
+DB_TABLES=['user','student','commodity','order']
