--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==8.0.0
 atomicwrites==1.3.0
 attrs==19.3.0
 blinker==1.4
@@ -10,6 +11,7 @@ docopt==0.6.2
 Flask==1.1.1
 Flask-Login==0.4.1
 Flask-Principal==0.4.0
+Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 idna==2.8
@@ -25,6 +27,7 @@ py==1.8.0
 PyMySQL==0.9.3
 pyparsing==2.4.5
 pytest==5.3.1
+pytz==2019.3
 requests==2.22.0
 six==1.13.0
 SQLAlchemy==1.3.11
