--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 colorama==0.4.1
+coverage==4.5.4
 docopt==0.6.2
 Flask==1.1.1
 Flask-Login==0.4.1
@@ -27,6 +28,7 @@ py==1.8.0
 PyMySQL==0.9.3
 pyparsing==2.4.5
 pytest==5.3.1
+pytest-cov==2.8.1
 pytz==2019.3
 requests==2.22.0
 six==1.13.0
