--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Login==0.4.1
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.1
+Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
 idna==2.8
 importlib-metadata==1.0.0
