--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -34,6 +34,9 @@ jobs:
         mysql user: root # optional, default is 
         # MYSQL_PASSWORD - specified superuser password which user is power for created database
         mysql password: root # optional, default is 
+    - name: Check mysql
+      run: service mysql start
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
