--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -35,7 +35,7 @@ jobs:
         # MYSQL_PASSWORD - specified superuser password which user is power for created database
         mysql password: root # optional, default is 
     - name: Check mysql
-      run: service mysql start
+      run: mysql -uroot -proot
     
     - name: Install dependencies
       run: |
