--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -47,7 +47,7 @@ jobs:
         export FLASK_ENV=development 
         flask init-db
       env:
-        DB_HOST: 127.0.0.1
+        DB_HOST: localhost
         DB_USER: root
         DB_PASSWORD: root
         DB_PORT: 13306
