--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aniso8601==8.0.0
 atomicwrites==1.3.0
 attrs==19.3.0
+BareNecessities==0.2.8
 blinker==1.4
 Bootstrap-Flask==1.1.0
 certifi==2019.11.28
@@ -20,6 +21,7 @@ idna==2.8
 importlib-metadata==1.0.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
+Mail==2.1.0
 MarkupSafe==1.1.1
 more-itertools==8.0.0
 packaging==19.2
