--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ colorama==0.4.1
 coverage==4.5.4
 docopt==0.6.2
 Flask==1.1.1
+Flask-Limiter==1.1.0
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.1
@@ -21,6 +23,7 @@ idna==2.8
 importlib-metadata==1.0.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
+limits==1.3
 Mail==2.1.0
 MarkupSafe==1.1.1
 more-itertools==8.0.0
