--- a/free_shark/free_shark.cfg
+++ b/free_shark/free_shark.cfg
@@ -1,3 +1,3 @@
 DEBUG=True
 SECRET_KEY='dev'
-DB_TABLES=['user','student','commodity','comorder']
+DB_TABLES=['user','student','commodity','comorder','token']
