--- a/tests/free_shark.cfg
+++ b/tests/free_shark.cfg
@@ -5,4 +5,4 @@ TESTING=True
 SQLALCHEMY_DATABASE_URI = 'mysql+pymysql://root:root@localhost:3306/free_shark?charset=utf8'
 # 'mysql+pymysql://用户名称:密码@localhost:端口/数据库名称'
 SQLALCHEMY_TRACK_MODIFICATIONS = True
-DB_TABLES=['user','student','commodity','comorder','token','block']
+DB_TABLES=['user','student','commodity','comorder','token','block','procedures']
