--- a/tests/mail_config.cfg
+++ b/tests/mail_config.cfg
@@ -1,3 +1,6 @@
-MAIL_USERNAME=2016141503045@stu.scu.edu.cn
-MAIL_PASSWORD=cb2yjz8R63UWF3SM
-MAIL_SERVER=mail.stu.edu.cn
+MAIL_USERNAME='2016141241126@stu.scu.edu.cn'
+MAIL_PASSWORD='YUVjpTN2WpVsI5kI'
+MAIL_SERVER='mail.stu.scu.edu.cn'
+MAIL_PORT=25
+MAIL_USE_SSL=False
+MAIL_DEFAULT_SENDER=MAIL_USERNAME
