--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,8 +45,9 @@ jobs:
       
     - name: Test with pytest
       run: |
-        pip install pytest
+        pip install pytest pytest-cov codecov
         pytest --cov=free_shark
+        codecov -t
       env:
         DB_HOST: localhost
         DB_USER: root
