--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,7 @@ jobs:
         FLASK_ENV: development
 
     - name: Codecov
-    - uses: codecov/codecov-action@v1.0.5
+      uses: codecov/codecov-action@v1.0.5
       with:
         # User defined upload name. Visible in Codecov UI
         token: ${{ secrets.CODECOV_TOKEN }}
